--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-pyTelegramBotAPI>=3.6.6
-redis>=3.0.1
-SQLAlchemy>=1.2.14
+certifi==2018.11.29
+chardet==3.0.4
+idna==2.7
+psycopg2==2.7.6.1
+pyTelegramBotAPI==3.6.6
+redis==3.0.1
+requests==2.20.1
+six==1.11.0
+SQLAlchemy==1.2.14
+urllib3==1.24.1
